fixes alignment on mobile

--- a/style.css
+++ b/style.css
@@ -102,11 +102,16 @@ body {
 }
 
 @media screen and (max-width: 900px) {
+  #navbar {
+    flex-direction: column;
+  }
+
   .app {
     flex-direction: column;
   }
 
   .itinerary-display {
+    margin: 0 auto;
     flex-direction: column;
   }
 
